<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <FrameLayout
        android:id="@+id/header_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile Page"
            android:textColor="#1F152E"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/body_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_fragment"
        >

        <!-- Personal Information -->
        <TextView
            android:id="@+id/personal_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Personal Information"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />

        <!-- Our Events -->
        <TextView
            android:id="@+id/event_history"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Event History"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />

        <TextView
            android:id="@+id/my_created_events"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Created Events"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />

        <TextView
            android:id="@+id/admin_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Login as Admin"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lighter_gray" />

        <!-- Delete Profile -->
        <TextView
            android:id="@+id/delete_profile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Delete Profile"
            android:textSize="18sp"
            android:textColor="#FF6B6B"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>