...
                android:text="Created Events"
                android:textColor="#221638"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/create_event_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/zxing_transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_plus"
                android:textSize="40sp"
...
