...
        android:orientation="horizontal">

        <Button
            android:id="@+id/qr_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="#6A4CC5"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/qr_open_button"
...
